# ChangeLog for sys-devel/bison
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.30 2004/06/24 22:43:46 agriffis Exp $

  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> bison-1.34-r1.ebuild,
  bison-1.35.ebuild, bison-1.75.ebuild:
  QA - fix use invocation

  16 Jun 2004; Daniel Black <dragonheart@gentoo.org> bison-1.875.ebuild:
  syntax fix on 3.4 compare condition

  16 Jun 2004; Daniel Black <dragonheart@gentoo.org> bison-1.875.ebuild:
  uclibc fixes thanks to Peter S. Mazinger <ps.m@gmx.net>

  06 Feb 2004; <gustavoz@gentoo.org> bison-1.875.ebuild:
  stable on sparc

  06 Feb 2004; Aron Griffis <agriffis@gentoo.org> bison-1.875.ebuild:
  k6 replacement in the ebuild was resulting in -march=i586-3, fix and make more
  stringent

  04 Feb 2004; Aron Griffis <agriffis@gentoo.org> bison-1.875.ebuild:
  Fix bug 29017 by replacing -march=k6 and -march=k6-2 with -march=i586. Fix bug
  39842 by restricting optimization on amd64 to -O0. Mark stable on x86.
  Remove icc cruft (leftover from 2002) and remove IUSE="build" since it isn't
  true.

  01 Feb 2004; Joshua Kinard <kumba@gentoo.org> bison-1.34-r1.ebuild,
  bison-1.35.ebuild, bison-1.75.ebuild, bison-1.875.ebuild:
  Bump to mips stable (needed for upcoming stageballs)

  20 Nov 2003; Aron Griffis <agriffis@gentoo.org> bison-1.875.ebuild:
  Stable on alpha

  17 Sep 2003; Jon Portnoy <avenj@gentoo.org> bison-1.875.ebuild :
  ia64 keywords.

  08 Sep 2003; Martin Schlemmer <azarah@gentoo.org> bison-1.34-r1.ebuild,
  bison-1.35.ebuild, bison-1.75.ebuild, bison-1.875.ebuild:
  Add m4 DEPEND (bug #28119), with some other cleanups to older
  ebuilds than 1.875.

  07 Sep 2003; Martin Schlemmer <azarah@gentoo.org> bison-1.875.ebuild:
  Fix DEPEND for when we have 'build' in USE.

*bison-1.875 (07 Sep 2003)

  08 Dec 2003; Guy Martin <gmsoft@gentoo.org> bison-1.875.ebuild :
  Marked stable on hppa.
