@@ -1,6 +1,6 @@
 MD5 5b8d6572f8235d7ce55b48bf732412d0 bison-1.75.ebuild 1072
 MD5 35fee9889b6d304bfce347a2ad8a76dd bison-1.34-r1.ebuild 1123
-MD5 d2d3e7db447a8da737e0ae0e343eef5b bison-1.875.ebuild 1794
+MD5 ad1d39d69e4a22d96a52cf2ae0cc9b7c bison-1.875.ebuild 1822
 MD5 06ab2a40b3da792bb74f57bd39ce2420 bison-1.35.ebuild 1225
 MD5 b80dca1c8d832adf137b71857d0c8d67 ChangeLog 4549
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
